--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,34 @@
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
 
+
+    <string name="com_techhab_dialogloginactivity_ok_button">OK</string>
+    <string name="com_techhab_loginview_log_out_button">Log out</string>
+    <string name="com_techhab_loginview_log_in_button">Log in</string>
+    <string name="com_techhab_loginview_logged_in_as">Logged in as: %1$s</string>
+    <string name="com_techhab_loginview_logged_in_using_facebook">Logged in using Facebook</string>
+    <string name="com_techhab_loginview_log_out_action">Log out</string>
+    <string name="com_techhab_loginview_cancel_action">Cancel</string>
+    <string name="com_techhab_logo_content_description">College Logo</string>
+    <string name="com_techhab_usersettingsfragment_log_in_button">Log in&#8230;</string>
+    <string name="com_techhab_usersettingsfragment_logged_in">Logged in</string>
+    <string name="com_techhab_usersettingsfragment_not_logged_in">Not logged in</string>
+
+    <string name="com_techhab_placepicker_subtitle_format">%1$s • %2$,d were here</string>
+    <string name="com_techhab_placepicker_subtitle_catetory_only_format">%1$s</string>
+    <string name="com_techhab_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
+
+    <string name="com_techhab_picker_done_button_text">Done</string>
+    <string name="com_techhab_choose_friends">Choose Friends</string>
+    <string name="com_techhab_nearby">Nearby</string>
+    <string name="com_techhab_loading">Loading…</string>
+
+    <string name="com_techhab_internet_permission_error_title">AndroidManifest Error</string>
+    <string name="com_techhab_internet_permission_error_message">WebView login requires INTERNET permission</string>
+    <string name="com_techhab_requesterror_web_login">Your account is locked. Please log into www.kzoo.edu to continue.</string>
+    <string name="com_techhab_requesterror_relogin">Please log into this app again to reconnect your account.</string>
+    <string name="com_techhab_requesterror_password_changed">Your password has changed. Please log into this app again to reconnect your account.</string>
+    <string name="com_techhab_requesterror_reconnect">Please log into this app again to reconnect your account.</string>
+    <string name="com_techhab_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
+
 </resources>
