--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
-    <string name="action_settings">Settings</string>
     <string name="com_techhab_dialogloginactivity_ok_button">OK</string>
     <string name="com_techhab_loginview_log_out_button">Log out</string>
     <string name="com_techhab_loginview_log_in_button">Log in</string>
@@ -106,4 +105,10 @@
     <string name="password">Password: </string>
     <string name="login">Login</string>
 
+    <!-- Action Bar -->
+    <string name = "action_search">Search</string>
+    <string name = "action_refresh">Refresh</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_overflow">More</string>
+    <string name="action_send">Send</string>
 </resources>
