--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
+    <string name="drawer_item1">My Profile</string>
+    <string name="drawer_item2">Emergency Call</string>
+    <string name="drawer_item3">Settings</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
@@ -55,6 +58,14 @@
     <string name="main_menu_11">Main Menu 11</string>
     <string name="main_menu_20">Main Menu 20</string>
     <string name="main_menu_21">Main Menu 21</string>
+
+    <!-- Navigation Drawer -->
+    <string-array name="nav_drawer_items">
+        <item>PROFILE</item>
+        <item>EMERGENCY CALL</item>
+        <item>SETTINGS</item>
+    </string-array>
+
 
     <!-- Sub Menu List -->
     <string-array name="sub_menu_00">
