--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,10 @@
     <!-- Navigation Drawer -->
     <string-array name="nav_drawer_items">
         <item>EMERGENCY CALL</item>
+        <item>HELP</item>
         <item>SETTINGS</item>
+        <item>SEND FEEDBACK</item>
+        <item>ABOUT</item>
     </string-array>
 
 
