--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
+    <string name="drawer_item1">My Profile</string>
+    <string name="drawer_item2">Emergency Call</string>
+    <string name="drawer_item3">Settings</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
@@ -55,6 +58,13 @@
     <string name="main_menu_11">Main Menu 11</string>
     <string name="main_menu_20">Main Menu 20</string>
     <string name="main_menu_21">Main Menu 21</string>
+
+    <!-- Navigation Drawer -->
+    <string-array name="nav_drawer_items">
+        <item>EMERGENCY CALL</item>
+        <item>SETTINGS</item>
+    </string-array>
+
 
     <!-- Sub Menu List -->
     <string-array name="sub_menu_00">
@@ -116,6 +126,14 @@
 
     <!-- Campus Info -->
     <string name="title_activity_info">InfoActivity</string>
+        <!-- Cafeteria -->
+        <string name="label_cafeteria_top">Welcome to College Dining Services</string>
+        <string name="label_cafeteria_contact">Contact Us:</string>
+        <string name="label_cafeteria_phone">(773) 702-8181</string>
+        <string name="label_cafeteria_richardson">Richardson Cafe Hours of Operation:</string>
+        <string name="label_cafeteria_hours">Monday-Friday: 10:00am-12:00am\nSaturday: 10:00am-6:00pm\nSunday: 6:00pm-12am</string>
+        <string name="label_cafeteria_bookClub"> The Book Cafe Hours of Operation:</string>
+        <string name="label_cafeteria_bookClubHours">Monday-Thursday: 7:45am-12:30am\nFriday: 7:45am-6pm\nSaturday: 9:30am-6:00pm\nSunday: 11:30pm-12:30am</string>
         <!-- Academic year -->
         <string name="academic_year_2014_15">2014-15</string>
         <string name="academic_year_2015_16">2015-16</string>
