--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,12 +62,14 @@
 
     <!-- Navigation Drawer -->
     <string-array name="nav_drawer_items">
-        <item>EMERGENCY CALL</item>
-        <item>HELP</item>
-        <item>SETTINGS</item>
-        <item>SEND FEEDBACK</item>
-        <item>ABOUT</item>
+        <item>Emergency Call</item>
+        <item>Help</item>
+        <item>Settings</item>
+        <item>Send Feedback</item>
+        <item>About</item>
     </string-array>
+
+    <string name="support">Support</string>
 
     <!-- Sub Menu List -->
     <string-array name="sub_menu_00">
