--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,9 +144,9 @@
     <string name="label_cafeteria_top">Welcome to College Dining Services</string>
     <string name="label_cafeteria_contact">Contact Us:</string>
     <string name="label_cafeteria_phone">(517) 763-1377</string>
-    <string name="label_cafeteria_richardson">Richardson Cafe Hours of Operation:</string>
+    <string name="label_cafeteria_richardson">Richardson Cafe</string>
     <string name="label_cafeteria_hours">Monday-Friday: 10:00am-12:00am\nSaturday: 10:00am-6:00pm\nSunday: 6:00pm-12am</string>
-    <string name="label_cafeteria_bookClub"> The Book Cafe Hours of Operation:</string>
+    <string name="label_cafeteria_bookClub"> The Book Cafe</string>
     <string name="label_cafeteria_bookClubHours">Monday-Thursday: 7:45am-12:30am\nFriday: 7:45am-6pm\nSaturday: 9:30am-6:00pm\nSunday: 11:30pm-12:30am</string>
     <string name="label_cafeteria_breakfast">BreakFast</string>
     <string name="label_cafeteria_lunch">Lunch</string>
