Nav drawer is 98% done, but still need to fix initialization bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,13 +63,13 @@
     <!-- Navigation Drawer -->
     <string-array name="nav_drawer_items">
         <item>Emergency Call</item>
-        <item>Help</item>
-        <item>Settings</item>
-        <item>Send Feedback</item>
         <item>About</item>
     </string-array>
 
-    <string name="support">Support</string>
+    <string-array name="nav_drawer_settings_support">
+        <item>Settings</item>
+        <item>Help &amp; feedback</item>
+    </string-array>
 
     <!-- Sub Menu List -->
     <string-array name="sub_menu_00">
