--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,6 +130,7 @@
     <string name="men">MEN\'S</string>
     <string name="women">WOMEN\'S</string>
     <string name="view_more">VIEW MORE</string>
+    <string name="view_less">VIEW LESS</string>
 
         <!-- Game In Progress card-->
         <string name="game_in_progress">Game In Progress</string>
