--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,12 @@
         <item>Campus Map</item>
     </string-array>
 
+    <string-array name="cafeteria_value">
+        <item>Day 1</item>
+        <item>Day 2</item>
+        <item>Day 3</item>
+    </string-array>
+
     <!-- Login fragment -->
     <string name="k_email">K Email</string>
     <string name="k_password">K Password</string>
