--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,9 +86,10 @@
     </string-array>
 
     <string-array name="cafeteria_value">
-        <item>Day 1</item>
-        <item>Day 2</item>
+        <item>Today</item>
+        <item>Tomorrow</item>
         <item>Day 3</item>
+        <item>Day 4</item>
     </string-array>
 
     <!-- Login fragment -->
