--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,6 +159,8 @@
         <!-- Upcoming Games card -->
         <string name="upcoming_games">Upcoming Games</string>
         <string name="upcoming_events">Upcoming Events</string>
+        <string name="no_upcoming_events">No upcoming events</string>
+        <string name="no_past_events">No past events</string>
 
         <!-- Team Roster card -->
         <string name="roster">Team Roster</string>
