--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,6 +181,26 @@
         <string name="result">Result</string>
 
 
+        <!-- Sports RSS URLS -->
+        <string name="mens_baseball">http://hornets.kzoo.edu/sports/bsb/2014-15/schedule?print=rss</string>
+        <string name="womens_softball">http://hornets.kzoo.edu/sports/sball/2014-15/schedule?print=rss</string>
+        <string name="mens_basketball">http://hornets.kzoo.edu/sports/mbkb/2014-15/schedule?print=rss</string>
+        <string name="womens_basketball">http://hornets.kzoo.edu/sports/wbkb/2014-15/schedule?print=rss</string>
+        <string name="mens_cross_country">http://hornets.kzoo.edu/sports/mxc/2014-15/schedule?print=rss</string>
+        <string name="womens_cross_country">http://hornets.kzoo.edu/sports/wxc/2014-15/schedule?print=rss</string>
+        <string name="mens_football">http://hornets.kzoo.edu/sports/fball/2014-15/schedule?print=rss</string>
+        <string name="mens_golf">http://hornets.kzoo.edu/sports/mgolf/2014-15/schedule?print=rss</string>
+        <string name="womens_golf">http://hornets.kzoo.edu/sports/wgolf/2014-15/schedule?print=rss</string>
+        <string name="mens_soccer">http://hornets.kzoo.edu/sports/msoc/2014-15/schedule?print=rss</string>
+        <string name="womens_soccer">http://hornets.kzoo.edu/sports/wsoc/2014-15/schedule?print=rss</string>
+        <string name="mens_swim_dive">http://hornets.kzoo.edu/sports/mswimdive/2014-15/schedule?print=rss</string>
+        <string name="womens_swim_dive">http://hornets.kzoo.edu/sports/wswimdive/2014-15/schedule?print=rss</string>
+        <string name="mens_tennis">http://hornets.kzoo.edu/sports/mten/2014-15/schedule?print=rss</string>
+        <string name="womens_tennis">http://hornets.kzoo.edu/sports/wten/2014-15/schedule?print=rss</string>
+        <string name="womens_volleyball">http://hornets.kzoo.edu/sports/wvball/2014-15/schedule?print=rss</string>
+        <string name="womens_lacrosse">http://hornets.kzoo.edu/sports/wlax/2014-15/schedule?print=rss</string>
+
+
 
     <!-- Academic Activity -->
         <!-- Search Courses -->
