--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,9 +140,7 @@
     <string name="label_cafeteria_breakfast">BreakFast</string>
     <string name="label_cafeteria_lunch">Lunch</string>
     <string name="label_cafeteria_dinner">Dinner</string>
-
     <string name="currently_serving">Currently Serving</string>
-
     <string name="monday_friday">Monday - Friday</string>
     <string name="mealtimes_mf">Breakfast: 7:30 - 10am\nLunch: 11 - 1:30pm\nDinner: 5 - 7:30pm</string>
     <string name="lunch_mf">Lunch: 11 - 1:30pm</string>
@@ -436,6 +434,9 @@
     <string name="setting_logout_summary">Logout and discard your saved settings for this app</string>
     <string name="setting_password">Please enter your password</string>
     <string name="title_activity_cafeteria">Dining Information</string>
+    <string name="setting_about">About</string>
+    <string name="setting_about_title">About</string>
+    <string name="setting_about_summary">About, Terms of Service, Privacy</string>
 
     <!-- Profile Activity -->
     <string-array name="profile_titles">
@@ -466,5 +467,6 @@
     <string name="title_activity_pin">PINActivity</string>
     <string name="title_activity_profile">My Profile</string>
     <string name="title_activity_re_authentication">ReAuthenticationActivity</string>
+    <string name="title_activity_about">AboutActivity</string>
 
 </resources>
